crates/forge_open_router/src/snapshots/forge_open_router__request__tests__tool_message_conversion.snap
---
source: crates/forge_open_router/src/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "tool",
  "content": "<tool_result><tool_name>test_tool</tool_name><success>{\"address\":[{\"city\":\"New York\"},{\"city\":\"San Francisco\"}],\"age\":30,\"user\":\"John\"}</success></tool_result>",
  "name": "test_tool",
  "tool_call_id": "123"
}
